objects/Related_HP_Strategic_Initiatives__c.object
<CustomObject>
    <fields>
        <fullName>BU_Growth_Strategy__c</fullName>
        <label>BU Growth Strategy</label>
        <referenceTo>BU_Growth_Strategy__c</referenceTo>
        <relationshipLabel>Related HP Strategic Initiatives</relationshipLabel>
        <relationshipName>Related_HP_Strategic_Initiatives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HP_Strategic_Initiative__c</fullName>
        <label>HP Strategic Initiative</label>
        <referenceTo>Strategic_Initiative__c</referenceTo>
        <relationshipLabel>Related HP Strategic Initiatives</relationshipLabel>
        <relationshipName>Related_HP_Strategic_Initiatives</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Key_RHPSI__c</fullName>
        <label>Unique Key RHPSI</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Related HP Strategic Initiatives</label>
    <nameField>
        <displayFormat>RHPSI-{0000}</displayFormat>
        <label>Related HP Strategic Initiatives   Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related HP Strategic Initiatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>